Update traversal to use schema ingest library
Update the traversal microservice to use the ingest
library to make the application more model driven

Issue-ID: AAI-1465
Change-Id: Ifcf56b5d0e7f25ce2bc735b3186e09bc28234100
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>